update website folders structure

--- a/components/employee/main.html
+++ b/components/employee/main.html
@@ -1,7 +1,7 @@
-    <div class="main" ng-controller="MainCtrl">
+    <div class="main">
 
     <label for="search-box">
-      Search for Employee
+      Search for Employee <span style="font-size: 70%;">(by last name)</span>
     </label>
       <input id="search-box" class="form-control" ng-model="searchText" />
       <table class="table">
