--- a/partials/login.html
+++ b/partials/login.html
@@ -1,4 +1,4 @@
-<form action="#" namw="login">
+<form action="#" name="login">
 	<label for="username">User Name: </label> <input type="text" id="username">
 	<label for="password">User Name: </label> <input type="password" id="password">
 </form>
